# aranea

./: .gitignore  Cargo.toml  Html-urls.md  先行研究.md
.cargo/: config.toml
DB/: 0.html  1.html  100.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  91.html  92.html  93.html  94.html  95.html  96.html  97.html  98.html  99.html
archives/: 3d_ai.rs  ai.rs  dc.rs  egui.rs  egui_base.rs  egui_test.rs  get_vec.rs  html_check.rs  htmls.rs  main.rs  nn.rs  nn_sinple.rs
data/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
src/: converter.rs  extract.rs  main.rs  make_data.rs  mods.rs  test.rs  tokenaize.rs  traits.rs
src/mods/: extract.rs  get_html.rs  lazy_str.rs  macros.rs  measures_items.rs  seo.rs  statistics.rs  strfn.rs  title40.rs  tokenaize.rs  traits.rs  vec_man.rs
test_db/: BOTTOM.html  MIDDLE.html  TOP.html
