[package]
name = "aranea"
version = "0.0.0"
authors = ["u7f8au7fbd <u7f8au7fbd@outlook.com>"]
edition = "2021"

[dependencies]
#基本
tokio = { version = "1.40.x", features = ["full"] }
rand = { version = "0.8.x", features = [] }
chrono = { version = "0.4.x", features = [] }
serde = { version = "1.0.x", features = ["derive"] }
serde_json = { version = "1.0.x", features = [] }
#TUI
ratatui = { version = "0.28.x" }
crossterm = { version = "0.28.x" }
#スクレイピング
reqwest = { version = "0.12.x", features = [] }
select = { version = "0.6.x", features = [] }
scraper = { version = "0.20.x", features = [] }
spider = { version = "0.6.x", features = [] }
#機械学習
ndarray = { version = "0.16.x", features = [] }
#グラフ
charming = { version = "0.3.x", features = [] }
plotters = { version = "0.3.x", features = [] }
#形態素解析
lindera = { version = "0.33.x", features = ["filter", "unidic"] }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
[profile.release.package."*"]
opt-level = 3
